// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Slider /> should render Slider with custom min, max and step 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    data-blade-component="slider"
    style={
      [
        {},
      ]
    }
  >
    <View
      data-blade-component="base-box"
      style={
        [
          {
            "marginBottom": 4,
            "marginRight": 16,
          },
        ]
      }
    >
      <View
        alignItems="center"
        data-blade-component="base-box"
        display="flex"
        flexDirection="row"
        gap="spacing.0"
        maxHeight="36px"
        style={
          [
            {
              "alignItems": "center",
              "display": "flex",
              "flexDirection": "row",
              "gap": 0,
              "maxHeight": 36,
            },
          ]
        }
      >
        <Text
          accessible={true}
          color="surface.text.gray.subtle"
          data-blade-component="text"
          fontFamily="text"
          fontSize={75}
          fontStyle="normal"
          fontWeight="medium"
          lineHeight={75}
          numberOfLines={2}
          style={
            [
              {
                "color": "hsla(200, 10%, 18%, 1)",
                "fontFamily": "Inter",
                "fontSize": 12,
                "fontStyle": "normal",
                "fontWeight": "500",
                "letterSpacing": 0,
                "lineHeight": 17,
                "marginBottom": 0,
                "marginLeft": 0,
                "marginRight": 0,
                "marginTop": 0,
                "paddingBottom": 0,
                "paddingLeft": 0,
                "paddingRight": 0,
                "paddingTop": 0,
                "textDecorationLine": "none",
              },
            ]
          }
        >
          Volume
        </Text>
        <View
          data-blade-component="visually-hidden"
          style={
            [
              {
                "borderColor": "black",
                "borderStyle": "solid",
                "borderWidth": 0,
                "clip": "rect(0 0 0 0)",
                "clipPath": "inset(50%)",
                "height": 1,
                "left": -10000,
                "marginBottom": -1,
                "marginLeft": 0,
                "marginRight": -1,
                "marginTop": 0,
                "overflow": "hidden",
                "paddingBottom": 0,
                "paddingLeft": 0,
                "paddingRight": 0,
                "paddingTop": 0,
                "position": "absolute",
                "whiteSpace": "nowrap",
                "width": 1,
                "wordWrap": "normal",
              },
            ]
          }
        >
          <Text
            accessible={true}
            color="surface.text.gray.normal"
            data-blade-component="text"
            fontFamily="text"
            fontSize={100}
            fontStyle="normal"
            fontWeight="regular"
            lineHeight={100}
            style={
              [
                {
                  "color": "hsla(0, 0%, 2%, 1)",
                  "fontFamily": "Inter",
                  "fontSize": 14,
                  "fontStyle": "normal",
                  "fontWeight": "400",
                  "letterSpacing": 0,
                  "lineHeight": 20,
                  "marginBottom": 0,
                  "marginLeft": 0,
                  "marginRight": 0,
                  "marginTop": 0,
                  "paddingBottom": 0,
                  "paddingLeft": 0,
                  "paddingRight": 0,
                  "paddingTop": 0,
                  "textDecorationLine": "none",
                },
              ]
            }
          />
        </View>
      </View>
    </View>
    <RNCSlider
      accessibilityLabel="Volume"
      disabled={false}
      enabled={true}
      inverted={false}
      maximumTrackTintColor="hsla(0, 0%, 97%, 1)"
      maximumValue={50}
      minimumTrackTintColor="hsla(218, 89%, 51%, 1)"
      minimumValue={10}
      onChange={[Function]}
      onRNCSliderSlidingComplete={[Function]}
      onRNCSliderSlidingStart={null}
      onRNCSliderValueChange={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      step={5}
      style={
        {
          "height": 40,
        }
      }
      tapToSeek={false}
      thumbImage={null}
      thumbTintColor="hsla(218, 89%, 51%, 1)"
      value={25}
    />
    <View
      data-blade-component="base-box"
      display="flex"
      flexDirection="row"
      justifyContent="space-between"
      style={
        [
          {
            "display": "flex",
            "flexDirection": "row",
            "justifyContent": "space-between",
          },
        ]
      }
    >
      <Text
        accessible={true}
        color="surface.text.gray.muted"
        data-blade-component="text"
        fontFamily="text"
        fontSize={75}
        fontStyle="normal"
        fontWeight="regular"
        lineHeight={75}
        style={
          [
            {
              "color": "hsla(204, 9%, 42%, 1)",
              "fontFamily": "Inter",
              "fontSize": 12,
              "fontStyle": "normal",
              "fontWeight": "400",
              "letterSpacing": 0,
              "lineHeight": 17,
              "marginBottom": 0,
              "marginLeft": 0,
              "marginRight": 0,
              "marginTop": 0,
              "paddingBottom": 0,
              "paddingLeft": 0,
              "paddingRight": 0,
              "paddingTop": 0,
              "textDecorationLine": "none",
            },
          ]
        }
      >
        10
      </Text>
      <Text
        accessible={true}
        color="surface.text.gray.muted"
        data-blade-component="text"
        fontFamily="text"
        fontSize={75}
        fontStyle="normal"
        fontWeight="regular"
        lineHeight={75}
        style={
          [
            {
              "color": "hsla(204, 9%, 42%, 1)",
              "fontFamily": "Inter",
              "fontSize": 12,
              "fontStyle": "normal",
              "fontWeight": "400",
              "letterSpacing": 0,
              "lineHeight": 17,
              "marginBottom": 0,
              "marginLeft": 0,
              "marginRight": 0,
              "marginTop": 0,
              "paddingBottom": 0,
              "paddingLeft": 0,
              "paddingRight": 0,
              "paddingTop": 0,
              "textDecorationLine": "none",
            },
          ]
        }
      >
        50
      </Text>
    </View>
  </View>
</View>
`;

exports[`<Slider /> should render Slider with default props 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    data-blade-component="slider"
    style={
      [
        {},
      ]
    }
  >
    <View
      data-blade-component="base-box"
      style={
        [
          {
            "marginBottom": 4,
            "marginRight": 16,
          },
        ]
      }
    >
      <View
        alignItems="center"
        data-blade-component="base-box"
        display="flex"
        flexDirection="row"
        gap="spacing.0"
        maxHeight="36px"
        style={
          [
            {
              "alignItems": "center",
              "display": "flex",
              "flexDirection": "row",
              "gap": 0,
              "maxHeight": 36,
            },
          ]
        }
      >
        <Text
          accessible={true}
          color="surface.text.gray.subtle"
          data-blade-component="text"
          fontFamily="text"
          fontSize={75}
          fontStyle="normal"
          fontWeight="medium"
          lineHeight={75}
          numberOfLines={2}
          style={
            [
              {
                "color": "hsla(200, 10%, 18%, 1)",
                "fontFamily": "Inter",
                "fontSize": 12,
                "fontStyle": "normal",
                "fontWeight": "500",
                "letterSpacing": 0,
                "lineHeight": 17,
                "marginBottom": 0,
                "marginLeft": 0,
                "marginRight": 0,
                "marginTop": 0,
                "paddingBottom": 0,
                "paddingLeft": 0,
                "paddingRight": 0,
                "paddingTop": 0,
                "textDecorationLine": "none",
              },
            ]
          }
        >
          Volume
        </Text>
        <View
          data-blade-component="visually-hidden"
          style={
            [
              {
                "borderColor": "black",
                "borderStyle": "solid",
                "borderWidth": 0,
                "clip": "rect(0 0 0 0)",
                "clipPath": "inset(50%)",
                "height": 1,
                "left": -10000,
                "marginBottom": -1,
                "marginLeft": 0,
                "marginRight": -1,
                "marginTop": 0,
                "overflow": "hidden",
                "paddingBottom": 0,
                "paddingLeft": 0,
                "paddingRight": 0,
                "paddingTop": 0,
                "position": "absolute",
                "whiteSpace": "nowrap",
                "width": 1,
                "wordWrap": "normal",
              },
            ]
          }
        >
          <Text
            accessible={true}
            color="surface.text.gray.normal"
            data-blade-component="text"
            fontFamily="text"
            fontSize={100}
            fontStyle="normal"
            fontWeight="regular"
            lineHeight={100}
            style={
              [
                {
                  "color": "hsla(0, 0%, 2%, 1)",
                  "fontFamily": "Inter",
                  "fontSize": 14,
                  "fontStyle": "normal",
                  "fontWeight": "400",
                  "letterSpacing": 0,
                  "lineHeight": 20,
                  "marginBottom": 0,
                  "marginLeft": 0,
                  "marginRight": 0,
                  "marginTop": 0,
                  "paddingBottom": 0,
                  "paddingLeft": 0,
                  "paddingRight": 0,
                  "paddingTop": 0,
                  "textDecorationLine": "none",
                },
              ]
            }
          />
        </View>
      </View>
    </View>
    <RNCSlider
      accessibilityLabel="Volume"
      disabled={false}
      enabled={true}
      inverted={false}
      maximumTrackTintColor="hsla(0, 0%, 97%, 1)"
      maximumValue={100}
      minimumTrackTintColor="hsla(218, 89%, 51%, 1)"
      minimumValue={0}
      onChange={[Function]}
      onRNCSliderSlidingComplete={[Function]}
      onRNCSliderSlidingStart={null}
      onRNCSliderValueChange={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      step={1}
      style={
        {
          "height": 40,
        }
      }
      tapToSeek={false}
      thumbImage={null}
      thumbTintColor="hsla(218, 89%, 51%, 1)"
      value={0}
    />
    <View
      data-blade-component="base-box"
      display="flex"
      flexDirection="row"
      justifyContent="space-between"
      style={
        [
          {
            "display": "flex",
            "flexDirection": "row",
            "justifyContent": "space-between",
          },
        ]
      }
    >
      <Text
        accessible={true}
        color="surface.text.gray.muted"
        data-blade-component="text"
        fontFamily="text"
        fontSize={75}
        fontStyle="normal"
        fontWeight="regular"
        lineHeight={75}
        style={
          [
            {
              "color": "hsla(204, 9%, 42%, 1)",
              "fontFamily": "Inter",
              "fontSize": 12,
              "fontStyle": "normal",
              "fontWeight": "400",
              "letterSpacing": 0,
              "lineHeight": 17,
              "marginBottom": 0,
              "marginLeft": 0,
              "marginRight": 0,
              "marginTop": 0,
              "paddingBottom": 0,
              "paddingLeft": 0,
              "paddingRight": 0,
              "paddingTop": 0,
              "textDecorationLine": "none",
            },
          ]
        }
      >
        0
      </Text>
      <Text
        accessible={true}
        color="surface.text.gray.muted"
        data-blade-component="text"
        fontFamily="text"
        fontSize={75}
        fontStyle="normal"
        fontWeight="regular"
        lineHeight={75}
        style={
          [
            {
              "color": "hsla(204, 9%, 42%, 1)",
              "fontFamily": "Inter",
              "fontSize": 12,
              "fontStyle": "normal",
              "fontWeight": "400",
              "letterSpacing": 0,
              "lineHeight": 17,
              "marginBottom": 0,
              "marginLeft": 0,
              "marginRight": 0,
              "marginTop": 0,
              "paddingBottom": 0,
              "paddingLeft": 0,
              "paddingRight": 0,
              "paddingTop": 0,
              "textDecorationLine": "none",
            },
          ]
        }
      >
        100
      </Text>
    </View>
  </View>
</View>
`;

exports[`<Slider /> should render with disabled state 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    data-blade-component="slider"
    style={
      [
        {},
      ]
    }
  >
    <View
      data-blade-component="base-box"
      style={
        [
          {
            "marginBottom": 4,
            "marginRight": 16,
          },
        ]
      }
    >
      <View
        alignItems="center"
        data-blade-component="base-box"
        display="flex"
        flexDirection="row"
        gap="spacing.0"
        maxHeight="36px"
        style={
          [
            {
              "alignItems": "center",
              "display": "flex",
              "flexDirection": "row",
              "gap": 0,
              "maxHeight": 36,
            },
          ]
        }
      >
        <Text
          accessible={true}
          color="surface.text.gray.subtle"
          data-blade-component="text"
          fontFamily="text"
          fontSize={75}
          fontStyle="normal"
          fontWeight="medium"
          lineHeight={75}
          numberOfLines={2}
          style={
            [
              {
                "color": "hsla(200, 10%, 18%, 1)",
                "fontFamily": "Inter",
                "fontSize": 12,
                "fontStyle": "normal",
                "fontWeight": "500",
                "letterSpacing": 0,
                "lineHeight": 17,
                "marginBottom": 0,
                "marginLeft": 0,
                "marginRight": 0,
                "marginTop": 0,
                "paddingBottom": 0,
                "paddingLeft": 0,
                "paddingRight": 0,
                "paddingTop": 0,
                "textDecorationLine": "none",
              },
            ]
          }
        >
          Volume
        </Text>
        <View
          data-blade-component="visually-hidden"
          style={
            [
              {
                "borderColor": "black",
                "borderStyle": "solid",
                "borderWidth": 0,
                "clip": "rect(0 0 0 0)",
                "clipPath": "inset(50%)",
                "height": 1,
                "left": -10000,
                "marginBottom": -1,
                "marginLeft": 0,
                "marginRight": -1,
                "marginTop": 0,
                "overflow": "hidden",
                "paddingBottom": 0,
                "paddingLeft": 0,
                "paddingRight": 0,
                "paddingTop": 0,
                "position": "absolute",
                "whiteSpace": "nowrap",
                "width": 1,
                "wordWrap": "normal",
              },
            ]
          }
        >
          <Text
            accessible={true}
            color="surface.text.gray.normal"
            data-blade-component="text"
            fontFamily="text"
            fontSize={100}
            fontStyle="normal"
            fontWeight="regular"
            lineHeight={100}
            style={
              [
                {
                  "color": "hsla(0, 0%, 2%, 1)",
                  "fontFamily": "Inter",
                  "fontSize": 14,
                  "fontStyle": "normal",
                  "fontWeight": "400",
                  "letterSpacing": 0,
                  "lineHeight": 20,
                  "marginBottom": 0,
                  "marginLeft": 0,
                  "marginRight": 0,
                  "marginTop": 0,
                  "paddingBottom": 0,
                  "paddingLeft": 0,
                  "paddingRight": 0,
                  "paddingTop": 0,
                  "textDecorationLine": "none",
                },
              ]
            }
          />
        </View>
      </View>
    </View>
    <RNCSlider
      accessibilityLabel="Volume"
      disabled={true}
      enabled={false}
      inverted={false}
      maximumTrackTintColor="hsla(0, 0%, 97%, 1)"
      maximumValue={100}
      minimumTrackTintColor="hsla(206, 10%, 29%, 0.06)"
      minimumValue={0}
      onChange={[Function]}
      onRNCSliderSlidingComplete={[Function]}
      onRNCSliderSlidingStart={null}
      onRNCSliderValueChange={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      step={1}
      style={
        {
          "height": 40,
        }
      }
      tapToSeek={false}
      thumbImage={null}
      thumbTintColor="hsla(206, 10%, 29%, 0.06)"
      value={0}
    />
    <View
      data-blade-component="base-box"
      display="flex"
      flexDirection="row"
      justifyContent="space-between"
      style={
        [
          {
            "display": "flex",
            "flexDirection": "row",
            "justifyContent": "space-between",
          },
        ]
      }
    >
      <Text
        accessible={true}
        color="surface.text.gray.muted"
        data-blade-component="text"
        fontFamily="text"
        fontSize={75}
        fontStyle="normal"
        fontWeight="regular"
        lineHeight={75}
        style={
          [
            {
              "color": "hsla(204, 9%, 42%, 1)",
              "fontFamily": "Inter",
              "fontSize": 12,
              "fontStyle": "normal",
              "fontWeight": "400",
              "letterSpacing": 0,
              "lineHeight": 17,
              "marginBottom": 0,
              "marginLeft": 0,
              "marginRight": 0,
              "marginTop": 0,
              "paddingBottom": 0,
              "paddingLeft": 0,
              "paddingRight": 0,
              "paddingTop": 0,
              "textDecorationLine": "none",
            },
          ]
        }
      >
        0
      </Text>
      <Text
        accessible={true}
        color="surface.text.gray.muted"
        data-blade-component="text"
        fontFamily="text"
        fontSize={75}
        fontStyle="normal"
        fontWeight="regular"
        lineHeight={75}
        style={
          [
            {
              "color": "hsla(204, 9%, 42%, 1)",
              "fontFamily": "Inter",
              "fontSize": 12,
              "fontStyle": "normal",
              "fontWeight": "400",
              "letterSpacing": 0,
              "lineHeight": 17,
              "marginBottom": 0,
              "marginLeft": 0,
              "marginRight": 0,
              "marginTop": 0,
              "paddingBottom": 0,
              "paddingLeft": 0,
              "paddingRight": 0,
              "paddingTop": 0,
              "textDecorationLine": "none",
            },
          ]
        }
      >
        100
      </Text>
    </View>
  </View>
</View>
`;

exports[`<Slider /> should render with errorText when validationState is error 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    data-blade-component="slider"
    style={
      [
        {},
      ]
    }
  >
    <View
      data-blade-component="base-box"
      style={
        [
          {
            "marginBottom": 4,
            "marginRight": 16,
          },
        ]
      }
    >
      <View
        alignItems="center"
        data-blade-component="base-box"
        display="flex"
        flexDirection="row"
        gap="spacing.0"
        maxHeight="36px"
        style={
          [
            {
              "alignItems": "center",
              "display": "flex",
              "flexDirection": "row",
              "gap": 0,
              "maxHeight": 36,
            },
          ]
        }
      >
        <Text
          accessible={true}
          color="surface.text.gray.subtle"
          data-blade-component="text"
          fontFamily="text"
          fontSize={75}
          fontStyle="normal"
          fontWeight="medium"
          lineHeight={75}
          numberOfLines={2}
          style={
            [
              {
                "color": "hsla(200, 10%, 18%, 1)",
                "fontFamily": "Inter",
                "fontSize": 12,
                "fontStyle": "normal",
                "fontWeight": "500",
                "letterSpacing": 0,
                "lineHeight": 17,
                "marginBottom": 0,
                "marginLeft": 0,
                "marginRight": 0,
                "marginTop": 0,
                "paddingBottom": 0,
                "paddingLeft": 0,
                "paddingRight": 0,
                "paddingTop": 0,
                "textDecorationLine": "none",
              },
            ]
          }
        >
          Volume
        </Text>
        <View
          data-blade-component="visually-hidden"
          style={
            [
              {
                "borderColor": "black",
                "borderStyle": "solid",
                "borderWidth": 0,
                "clip": "rect(0 0 0 0)",
                "clipPath": "inset(50%)",
                "height": 1,
                "left": -10000,
                "marginBottom": -1,
                "marginLeft": 0,
                "marginRight": -1,
                "marginTop": 0,
                "overflow": "hidden",
                "paddingBottom": 0,
                "paddingLeft": 0,
                "paddingRight": 0,
                "paddingTop": 0,
                "position": "absolute",
                "whiteSpace": "nowrap",
                "width": 1,
                "wordWrap": "normal",
              },
            ]
          }
        >
          <Text
            accessible={true}
            color="surface.text.gray.normal"
            data-blade-component="text"
            fontFamily="text"
            fontSize={100}
            fontStyle="normal"
            fontWeight="regular"
            lineHeight={100}
            style={
              [
                {
                  "color": "hsla(0, 0%, 2%, 1)",
                  "fontFamily": "Inter",
                  "fontSize": 14,
                  "fontStyle": "normal",
                  "fontWeight": "400",
                  "letterSpacing": 0,
                  "lineHeight": 20,
                  "marginBottom": 0,
                  "marginLeft": 0,
                  "marginRight": 0,
                  "marginTop": 0,
                  "paddingBottom": 0,
                  "paddingLeft": 0,
                  "paddingRight": 0,
                  "paddingTop": 0,
                  "textDecorationLine": "none",
                },
              ]
            }
          />
        </View>
      </View>
    </View>
    <RNCSlider
      accessibilityLabel="Volume"
      disabled={false}
      enabled={true}
      inverted={false}
      maximumTrackTintColor="hsla(0, 0%, 97%, 1)"
      maximumValue={100}
      minimumTrackTintColor="hsla(218, 89%, 51%, 1)"
      minimumValue={0}
      onChange={[Function]}
      onRNCSliderSlidingComplete={[Function]}
      onRNCSliderSlidingStart={null}
      onRNCSliderValueChange={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      step={1}
      style={
        {
          "height": 40,
        }
      }
      tapToSeek={false}
      thumbImage={null}
      thumbTintColor="hsla(218, 89%, 51%, 1)"
      value={0}
    />
    <View
      data-blade-component="base-box"
      display="flex"
      flexDirection="row"
      justifyContent="space-between"
      style={
        [
          {
            "display": "flex",
            "flexDirection": "row",
            "justifyContent": "space-between",
          },
        ]
      }
    >
      <Text
        accessible={true}
        color="surface.text.gray.muted"
        data-blade-component="text"
        fontFamily="text"
        fontSize={75}
        fontStyle="normal"
        fontWeight="regular"
        lineHeight={75}
        style={
          [
            {
              "color": "hsla(204, 9%, 42%, 1)",
              "fontFamily": "Inter",
              "fontSize": 12,
              "fontStyle": "normal",
              "fontWeight": "400",
              "letterSpacing": 0,
              "lineHeight": 17,
              "marginBottom": 0,
              "marginLeft": 0,
              "marginRight": 0,
              "marginTop": 0,
              "paddingBottom": 0,
              "paddingLeft": 0,
              "paddingRight": 0,
              "paddingTop": 0,
              "textDecorationLine": "none",
            },
          ]
        }
      >
        0
      </Text>
      <Text
        accessible={true}
        color="surface.text.gray.muted"
        data-blade-component="text"
        fontFamily="text"
        fontSize={75}
        fontStyle="normal"
        fontWeight="regular"
        lineHeight={75}
        style={
          [
            {
              "color": "hsla(204, 9%, 42%, 1)",
              "fontFamily": "Inter",
              "fontSize": 12,
              "fontStyle": "normal",
              "fontWeight": "400",
              "letterSpacing": 0,
              "lineHeight": 17,
              "marginBottom": 0,
              "marginLeft": 0,
              "marginRight": 0,
              "marginTop": 0,
              "paddingBottom": 0,
              "paddingLeft": 0,
              "paddingRight": 0,
              "paddingTop": 0,
              "textDecorationLine": "none",
            },
          ]
        }
      >
        100
      </Text>
    </View>
    <View
      data-blade-component="base-box"
      id="slider-49-errortext-51"
      style={
        [
          {
            "marginTop": 4,
          },
        ]
      }
    >
      <View
        alignItems="center"
        data-blade-component="base-box"
        display="flex"
        flexDirection="row"
        gap="spacing.2"
        style={
          [
            {
              "alignItems": "center",
              "display": "flex",
              "flexDirection": "row",
              "gap": 4,
            },
          ]
        }
      >
        <View
          data-blade-component="box"
          flexShrink={0}
          style={
            [
              {
                "flexShrink": 0,
                "marginTop": 0,
              },
            ]
          }
        >
          <RNSVGSvgView
            accessibilityElementsHidden={true}
            align="xMidYMid"
            bbHeight="12px"
            bbWidth="12px"
            data-blade-component="icon"
            display="block"
            fill="none"
            focusable={false}
            height="12px"
            importantForAccessibility="no-hide-descendants"
            meetOrSlice={0}
            minX={0}
            minY={0}
            style={
              [
                {
                  "backgroundColor": "transparent",
                  "borderWidth": 0,
                },
                [
                  {
                    "display": "block",
                  },
                ],
                {
                  "flex": 0,
                  "height": 12,
                  "width": 12,
                },
              ]
            }
            vbHeight={24}
            vbWidth={24}
            width="12px"
          >
            <RNSVGGroup
              fill={null}
              propList={
                [
                  "fill",
                ]
              }
            >
              <RNSVGPath
                d="M12 11C12.5523 11 13 11.4477 13 12V16C13 16.5523 12.5523 17 12 17C11.4477 17 11 16.5523 11 16V12C11 11.4477 11.4477 11 12 11Z"
                fill={
                  {
                    "payload": 4291829265,
                    "type": 0,
                  }
                }
                propList={
                  [
                    "fill",
                  ]
                }
              />
              <RNSVGPath
                d="M12 7C11.4477 7 11 7.44772 11 8C11 8.55228 11.4477 9 12 9H12.01C12.5623 9 13.01 8.55228 13.01 8C13.01 7.44772 12.5623 7 12.01 7H12Z"
                fill={
                  {
                    "payload": 4291829265,
                    "type": 0,
                  }
                }
                propList={
                  [
                    "fill",
                  ]
                }
              />
              <RNSVGPath
                clipRule={0}
                d="M1 12C1 5.92487 5.92487 1 12 1C18.0751 1 23 5.92487 23 12C23 18.0751 18.0751 23 12 23C5.92487 23 1 18.0751 1 12ZM12 3C7.02944 3 3 7.02944 3 12C3 16.9706 7.02944 21 12 21C16.9706 21 21 16.9706 21 12C21 7.02944 16.9706 3 12 3Z"
                fill={
                  {
                    "payload": 4291829265,
                    "type": 0,
                  }
                }
                fillRule={0}
                propList={
                  [
                    "fill",
                    "fillRule",
                  ]
                }
              />
            </RNSVGGroup>
          </RNSVGSvgView>
        </View>
        <Text
          accessible={true}
          color="feedback.text.negative.intense"
          data-blade-component="text"
          fontFamily="text"
          fontSize={50}
          fontStyle="normal"
          fontWeight="regular"
          lineHeight={50}
          marginTop="spacing.0"
          style={
            [
              {
                "color": "hsla(4, 85%, 44%, 1)",
                "fontFamily": "Inter",
                "fontSize": 11,
                "fontStyle": "normal",
                "fontWeight": "400",
                "letterSpacing": 0,
                "lineHeight": 16,
                "marginBottom": 0,
                "marginLeft": 0,
                "marginRight": 0,
                "marginTop": 0,
                "paddingBottom": 0,
                "paddingLeft": 0,
                "paddingRight": 0,
                "paddingTop": 0,
                "textDecorationLine": "none",
              },
            ]
          }
        >
          Value out of range
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`<Slider /> should render with helpText 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    data-blade-component="slider"
    style={
      [
        {},
      ]
    }
  >
    <View
      data-blade-component="base-box"
      style={
        [
          {
            "marginBottom": 4,
            "marginRight": 16,
          },
        ]
      }
    >
      <View
        alignItems="center"
        data-blade-component="base-box"
        display="flex"
        flexDirection="row"
        gap="spacing.0"
        maxHeight="36px"
        style={
          [
            {
              "alignItems": "center",
              "display": "flex",
              "flexDirection": "row",
              "gap": 0,
              "maxHeight": 36,
            },
          ]
        }
      >
        <Text
          accessible={true}
          color="surface.text.gray.subtle"
          data-blade-component="text"
          fontFamily="text"
          fontSize={75}
          fontStyle="normal"
          fontWeight="medium"
          lineHeight={75}
          numberOfLines={2}
          style={
            [
              {
                "color": "hsla(200, 10%, 18%, 1)",
                "fontFamily": "Inter",
                "fontSize": 12,
                "fontStyle": "normal",
                "fontWeight": "500",
                "letterSpacing": 0,
                "lineHeight": 17,
                "marginBottom": 0,
                "marginLeft": 0,
                "marginRight": 0,
                "marginTop": 0,
                "paddingBottom": 0,
                "paddingLeft": 0,
                "paddingRight": 0,
                "paddingTop": 0,
                "textDecorationLine": "none",
              },
            ]
          }
        >
          Volume
        </Text>
        <View
          data-blade-component="visually-hidden"
          style={
            [
              {
                "borderColor": "black",
                "borderStyle": "solid",
                "borderWidth": 0,
                "clip": "rect(0 0 0 0)",
                "clipPath": "inset(50%)",
                "height": 1,
                "left": -10000,
                "marginBottom": -1,
                "marginLeft": 0,
                "marginRight": -1,
                "marginTop": 0,
                "overflow": "hidden",
                "paddingBottom": 0,
                "paddingLeft": 0,
                "paddingRight": 0,
                "paddingTop": 0,
                "position": "absolute",
                "whiteSpace": "nowrap",
                "width": 1,
                "wordWrap": "normal",
              },
            ]
          }
        >
          <Text
            accessible={true}
            color="surface.text.gray.normal"
            data-blade-component="text"
            fontFamily="text"
            fontSize={100}
            fontStyle="normal"
            fontWeight="regular"
            lineHeight={100}
            style={
              [
                {
                  "color": "hsla(0, 0%, 2%, 1)",
                  "fontFamily": "Inter",
                  "fontSize": 14,
                  "fontStyle": "normal",
                  "fontWeight": "400",
                  "letterSpacing": 0,
                  "lineHeight": 20,
                  "marginBottom": 0,
                  "marginLeft": 0,
                  "marginRight": 0,
                  "marginTop": 0,
                  "paddingBottom": 0,
                  "paddingLeft": 0,
                  "paddingRight": 0,
                  "paddingTop": 0,
                  "textDecorationLine": "none",
                },
              ]
            }
          />
        </View>
      </View>
    </View>
    <RNCSlider
      accessibilityLabel="Volume"
      disabled={false}
      enabled={true}
      inverted={false}
      maximumTrackTintColor="hsla(0, 0%, 97%, 1)"
      maximumValue={100}
      minimumTrackTintColor="hsla(218, 89%, 51%, 1)"
      minimumValue={0}
      onChange={[Function]}
      onRNCSliderSlidingComplete={[Function]}
      onRNCSliderSlidingStart={null}
      onRNCSliderValueChange={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      step={1}
      style={
        {
          "height": 40,
        }
      }
      tapToSeek={false}
      thumbImage={null}
      thumbTintColor="hsla(218, 89%, 51%, 1)"
      value={0}
    />
    <View
      data-blade-component="base-box"
      display="flex"
      flexDirection="row"
      justifyContent="space-between"
      style={
        [
          {
            "display": "flex",
            "flexDirection": "row",
            "justifyContent": "space-between",
          },
        ]
      }
    >
      <Text
        accessible={true}
        color="surface.text.gray.muted"
        data-blade-component="text"
        fontFamily="text"
        fontSize={75}
        fontStyle="normal"
        fontWeight="regular"
        lineHeight={75}
        style={
          [
            {
              "color": "hsla(204, 9%, 42%, 1)",
              "fontFamily": "Inter",
              "fontSize": 12,
              "fontStyle": "normal",
              "fontWeight": "400",
              "letterSpacing": 0,
              "lineHeight": 17,
              "marginBottom": 0,
              "marginLeft": 0,
              "marginRight": 0,
              "marginTop": 0,
              "paddingBottom": 0,
              "paddingLeft": 0,
              "paddingRight": 0,
              "paddingTop": 0,
              "textDecorationLine": "none",
            },
          ]
        }
      >
        0
      </Text>
      <Text
        accessible={true}
        color="surface.text.gray.muted"
        data-blade-component="text"
        fontFamily="text"
        fontSize={75}
        fontStyle="normal"
        fontWeight="regular"
        lineHeight={75}
        style={
          [
            {
              "color": "hsla(204, 9%, 42%, 1)",
              "fontFamily": "Inter",
              "fontSize": 12,
              "fontStyle": "normal",
              "fontWeight": "400",
              "letterSpacing": 0,
              "lineHeight": 17,
              "marginBottom": 0,
              "marginLeft": 0,
              "marginRight": 0,
              "marginTop": 0,
              "paddingBottom": 0,
              "paddingLeft": 0,
              "paddingRight": 0,
              "paddingTop": 0,
              "textDecorationLine": "none",
            },
          ]
        }
      >
        100
      </Text>
    </View>
    <View
      data-blade-component="base-box"
      id="slider-37-helptext-40"
      style={
        [
          {
            "marginTop": 4,
          },
        ]
      }
    >
      <View
        alignItems="center"
        data-blade-component="base-box"
        display="flex"
        flexDirection="row"
        gap="spacing.2"
        style={
          [
            {
              "alignItems": "center",
              "display": "flex",
              "flexDirection": "row",
              "gap": 4,
            },
          ]
        }
      >
        <Text
          accessible={true}
          color="surface.text.gray.muted"
          data-blade-component="text"
          fontFamily="text"
          fontSize={50}
          fontStyle="normal"
          fontWeight="regular"
          lineHeight={50}
          marginTop="spacing.0"
          style={
            [
              {
                "color": "hsla(204, 9%, 42%, 1)",
                "fontFamily": "Inter",
                "fontSize": 11,
                "fontStyle": "normal",
                "fontWeight": "400",
                "letterSpacing": 0,
                "lineHeight": 16,
                "marginBottom": 0,
                "marginLeft": 0,
                "marginRight": 0,
                "marginTop": 0,
                "paddingBottom": 0,
                "paddingLeft": 0,
                "paddingRight": 0,
                "paddingTop": 0,
                "textDecorationLine": "none",
              },
            ]
          }
        >
          Adjust the volume level
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`<Slider /> should render with necessityIndicator required 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    data-blade-component="slider"
    style={
      [
        {},
      ]
    }
  >
    <View
      data-blade-component="base-box"
      style={
        [
          {
            "marginBottom": 4,
            "marginRight": 16,
          },
        ]
      }
    >
      <View
        alignItems="center"
        data-blade-component="base-box"
        display="flex"
        flexDirection="row"
        gap="spacing.0"
        maxHeight="36px"
        style={
          [
            {
              "alignItems": "center",
              "display": "flex",
              "flexDirection": "row",
              "gap": 0,
              "maxHeight": 36,
            },
          ]
        }
      >
        <Text
          accessible={true}
          color="surface.text.gray.subtle"
          data-blade-component="text"
          fontFamily="text"
          fontSize={75}
          fontStyle="normal"
          fontWeight="medium"
          lineHeight={75}
          numberOfLines={2}
          style={
            [
              {
                "color": "hsla(200, 10%, 18%, 1)",
                "fontFamily": "Inter",
                "fontSize": 12,
                "fontStyle": "normal",
                "fontWeight": "500",
                "letterSpacing": 0,
                "lineHeight": 17,
                "marginBottom": 0,
                "marginLeft": 0,
                "marginRight": 0,
                "marginTop": 0,
                "paddingBottom": 0,
                "paddingLeft": 0,
                "paddingRight": 0,
                "paddingTop": 0,
                "textDecorationLine": "none",
              },
            ]
          }
        >
          Volume
        </Text>
        <View
          data-blade-component="visually-hidden"
          style={
            [
              {
                "borderColor": "black",
                "borderStyle": "solid",
                "borderWidth": 0,
                "clip": "rect(0 0 0 0)",
                "clipPath": "inset(50%)",
                "height": 1,
                "left": -10000,
                "marginBottom": -1,
                "marginLeft": 0,
                "marginRight": -1,
                "marginTop": 0,
                "overflow": "hidden",
                "paddingBottom": 0,
                "paddingLeft": 0,
                "paddingRight": 0,
                "paddingTop": 0,
                "position": "absolute",
                "whiteSpace": "nowrap",
                "width": 1,
                "wordWrap": "normal",
              },
            ]
          }
        >
          <Text
            accessible={true}
            color="surface.text.gray.normal"
            data-blade-component="text"
            fontFamily="text"
            fontSize={100}
            fontStyle="normal"
            fontWeight="regular"
            lineHeight={100}
            style={
              [
                {
                  "color": "hsla(0, 0%, 2%, 1)",
                  "fontFamily": "Inter",
                  "fontSize": 14,
                  "fontStyle": "normal",
                  "fontWeight": "400",
                  "letterSpacing": 0,
                  "lineHeight": 20,
                  "marginBottom": 0,
                  "marginLeft": 0,
                  "marginRight": 0,
                  "marginTop": 0,
                  "paddingBottom": 0,
                  "paddingLeft": 0,
                  "paddingRight": 0,
                  "paddingTop": 0,
                  "textDecorationLine": "none",
                },
              ]
            }
          >
            required
          </Text>
          <Text
            accessible={true}
            color="surface.text.gray.normal"
            data-blade-component="text"
            fontFamily="text"
            fontSize={100}
            fontStyle="normal"
            fontWeight="regular"
            lineHeight={100}
            style={
              [
                {
                  "color": "hsla(0, 0%, 2%, 1)",
                  "fontFamily": "Inter",
                  "fontSize": 14,
                  "fontStyle": "normal",
                  "fontWeight": "400",
                  "letterSpacing": 0,
                  "lineHeight": 20,
                  "marginBottom": 0,
                  "marginLeft": 0,
                  "marginRight": 0,
                  "marginTop": 0,
                  "paddingBottom": 0,
                  "paddingLeft": 0,
                  "paddingRight": 0,
                  "paddingTop": 0,
                  "textDecorationLine": "none",
                },
              ]
            }
          />
        </View>
        <Text
          accessible={true}
          alignSelf="flex-start"
          color="feedback.text.negative.intense"
          data-blade-component="text"
          fontFamily="text"
          fontSize={75}
          fontStyle="normal"
          fontWeight="regular"
          lineHeight={75}
          style={
            [
              {
                "alignSelf": "flex-start",
                "color": "hsla(4, 85%, 44%, 1)",
                "fontFamily": "Inter",
                "fontSize": 12,
                "fontStyle": "normal",
                "fontWeight": "400",
                "letterSpacing": 0,
                "lineHeight": 17,
                "marginBottom": 0,
                "marginLeft": 0,
                "marginRight": 0,
                "marginTop": 0,
                "paddingBottom": 0,
                "paddingLeft": 0,
                "paddingRight": 0,
                "paddingTop": 0,
                "textDecorationLine": "none",
              },
            ]
          }
        >
          *
        </Text>
      </View>
    </View>
    <RNCSlider
      accessibilityLabel="Volume"
      disabled={false}
      enabled={true}
      inverted={false}
      maximumTrackTintColor="hsla(0, 0%, 97%, 1)"
      maximumValue={100}
      minimumTrackTintColor="hsla(218, 89%, 51%, 1)"
      minimumValue={0}
      onChange={[Function]}
      onRNCSliderSlidingComplete={[Function]}
      onRNCSliderSlidingStart={null}
      onRNCSliderValueChange={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      step={1}
      style={
        {
          "height": 40,
        }
      }
      tapToSeek={false}
      thumbImage={null}
      thumbTintColor="hsla(218, 89%, 51%, 1)"
      value={0}
    />
    <View
      data-blade-component="base-box"
      display="flex"
      flexDirection="row"
      justifyContent="space-between"
      style={
        [
          {
            "display": "flex",
            "flexDirection": "row",
            "justifyContent": "space-between",
          },
        ]
      }
    >
      <Text
        accessible={true}
        color="surface.text.gray.muted"
        data-blade-component="text"
        fontFamily="text"
        fontSize={75}
        fontStyle="normal"
        fontWeight="regular"
        lineHeight={75}
        style={
          [
            {
              "color": "hsla(204, 9%, 42%, 1)",
              "fontFamily": "Inter",
              "fontSize": 12,
              "fontStyle": "normal",
              "fontWeight": "400",
              "letterSpacing": 0,
              "lineHeight": 17,
              "marginBottom": 0,
              "marginLeft": 0,
              "marginRight": 0,
              "marginTop": 0,
              "paddingBottom": 0,
              "paddingLeft": 0,
              "paddingRight": 0,
              "paddingTop": 0,
              "textDecorationLine": "none",
            },
          ]
        }
      >
        0
      </Text>
      <Text
        accessible={true}
        color="surface.text.gray.muted"
        data-blade-component="text"
        fontFamily="text"
        fontSize={75}
        fontStyle="normal"
        fontWeight="regular"
        lineHeight={75}
        style={
          [
            {
              "color": "hsla(204, 9%, 42%, 1)",
              "fontFamily": "Inter",
              "fontSize": 12,
              "fontStyle": "normal",
              "fontWeight": "400",
              "letterSpacing": 0,
              "lineHeight": 17,
              "marginBottom": 0,
              "marginLeft": 0,
              "marginRight": 0,
              "marginTop": 0,
              "paddingBottom": 0,
              "paddingLeft": 0,
              "paddingRight": 0,
              "paddingTop": 0,
              "textDecorationLine": "none",
            },
          ]
        }
      >
        100
      </Text>
    </View>
  </View>
</View>
`;

exports[`<Slider /> should render with small size 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    data-blade-component="slider"
    style={
      [
        {},
      ]
    }
  >
    <View
      data-blade-component="base-box"
      style={
        [
          {
            "marginBottom": 4,
            "marginRight": 16,
          },
        ]
      }
    >
      <View
        alignItems="center"
        data-blade-component="base-box"
        display="flex"
        flexDirection="row"
        gap="spacing.0"
        maxHeight="36px"
        style={
          [
            {
              "alignItems": "center",
              "display": "flex",
              "flexDirection": "row",
              "gap": 0,
              "maxHeight": 36,
            },
          ]
        }
      >
        <Text
          accessible={true}
          color="surface.text.gray.subtle"
          data-blade-component="text"
          fontFamily="text"
          fontSize={75}
          fontStyle="normal"
          fontWeight="medium"
          lineHeight={75}
          numberOfLines={2}
          style={
            [
              {
                "color": "hsla(200, 10%, 18%, 1)",
                "fontFamily": "Inter",
                "fontSize": 12,
                "fontStyle": "normal",
                "fontWeight": "500",
                "letterSpacing": 0,
                "lineHeight": 17,
                "marginBottom": 0,
                "marginLeft": 0,
                "marginRight": 0,
                "marginTop": 0,
                "paddingBottom": 0,
                "paddingLeft": 0,
                "paddingRight": 0,
                "paddingTop": 0,
                "textDecorationLine": "none",
              },
            ]
          }
        >
          Volume
        </Text>
        <View
          data-blade-component="visually-hidden"
          style={
            [
              {
                "borderColor": "black",
                "borderStyle": "solid",
                "borderWidth": 0,
                "clip": "rect(0 0 0 0)",
                "clipPath": "inset(50%)",
                "height": 1,
                "left": -10000,
                "marginBottom": -1,
                "marginLeft": 0,
                "marginRight": -1,
                "marginTop": 0,
                "overflow": "hidden",
                "paddingBottom": 0,
                "paddingLeft": 0,
                "paddingRight": 0,
                "paddingTop": 0,
                "position": "absolute",
                "whiteSpace": "nowrap",
                "width": 1,
                "wordWrap": "normal",
              },
            ]
          }
        >
          <Text
            accessible={true}
            color="surface.text.gray.normal"
            data-blade-component="text"
            fontFamily="text"
            fontSize={100}
            fontStyle="normal"
            fontWeight="regular"
            lineHeight={100}
            style={
              [
                {
                  "color": "hsla(0, 0%, 2%, 1)",
                  "fontFamily": "Inter",
                  "fontSize": 14,
                  "fontStyle": "normal",
                  "fontWeight": "400",
                  "letterSpacing": 0,
                  "lineHeight": 20,
                  "marginBottom": 0,
                  "marginLeft": 0,
                  "marginRight": 0,
                  "marginTop": 0,
                  "paddingBottom": 0,
                  "paddingLeft": 0,
                  "paddingRight": 0,
                  "paddingTop": 0,
                  "textDecorationLine": "none",
                },
              ]
            }
          />
        </View>
      </View>
    </View>
    <RNCSlider
      accessibilityLabel="Volume"
      disabled={false}
      enabled={true}
      inverted={false}
      maximumTrackTintColor="hsla(0, 0%, 97%, 1)"
      maximumValue={100}
      minimumTrackTintColor="hsla(218, 89%, 51%, 1)"
      minimumValue={0}
      onChange={[Function]}
      onRNCSliderSlidingComplete={[Function]}
      onRNCSliderSlidingStart={null}
      onRNCSliderValueChange={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      step={1}
      style={
        {
          "height": 40,
        }
      }
      tapToSeek={false}
      thumbImage={null}
      thumbTintColor="hsla(218, 89%, 51%, 1)"
      value={0}
    />
    <View
      data-blade-component="base-box"
      display="flex"
      flexDirection="row"
      justifyContent="space-between"
      style={
        [
          {
            "display": "flex",
            "flexDirection": "row",
            "justifyContent": "space-between",
          },
        ]
      }
    >
      <Text
        accessible={true}
        color="surface.text.gray.muted"
        data-blade-component="text"
        fontFamily="text"
        fontSize={75}
        fontStyle="normal"
        fontWeight="regular"
        lineHeight={75}
        style={
          [
            {
              "color": "hsla(204, 9%, 42%, 1)",
              "fontFamily": "Inter",
              "fontSize": 12,
              "fontStyle": "normal",
              "fontWeight": "400",
              "letterSpacing": 0,
              "lineHeight": 17,
              "marginBottom": 0,
              "marginLeft": 0,
              "marginRight": 0,
              "marginTop": 0,
              "paddingBottom": 0,
              "paddingLeft": 0,
              "paddingRight": 0,
              "paddingTop": 0,
              "textDecorationLine": "none",
            },
          ]
        }
      >
        0
      </Text>
      <Text
        accessible={true}
        color="surface.text.gray.muted"
        data-blade-component="text"
        fontFamily="text"
        fontSize={75}
        fontStyle="normal"
        fontWeight="regular"
        lineHeight={75}
        style={
          [
            {
              "color": "hsla(204, 9%, 42%, 1)",
              "fontFamily": "Inter",
              "fontSize": 12,
              "fontStyle": "normal",
              "fontWeight": "400",
              "letterSpacing": 0,
              "lineHeight": 17,
              "marginBottom": 0,
              "marginLeft": 0,
              "marginRight": 0,
              "marginTop": 0,
              "paddingBottom": 0,
              "paddingLeft": 0,
              "paddingRight": 0,
              "paddingTop": 0,
              "textDecorationLine": "none",
            },
          ]
        }
      >
        100
      </Text>
    </View>
  </View>
</View>
`;

exports[`<Slider /> should render with successText when validationState is success 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    data-blade-component="slider"
    style={
      [
        {},
      ]
    }
  >
    <View
      data-blade-component="base-box"
      style={
        [
          {
            "marginBottom": 4,
            "marginRight": 16,
          },
        ]
      }
    >
      <View
        alignItems="center"
        data-blade-component="base-box"
        display="flex"
        flexDirection="row"
        gap="spacing.0"
        maxHeight="36px"
        style={
          [
            {
              "alignItems": "center",
              "display": "flex",
              "flexDirection": "row",
              "gap": 0,
              "maxHeight": 36,
            },
          ]
        }
      >
        <Text
          accessible={true}
          color="surface.text.gray.subtle"
          data-blade-component="text"
          fontFamily="text"
          fontSize={75}
          fontStyle="normal"
          fontWeight="medium"
          lineHeight={75}
          numberOfLines={2}
          style={
            [
              {
                "color": "hsla(200, 10%, 18%, 1)",
                "fontFamily": "Inter",
                "fontSize": 12,
                "fontStyle": "normal",
                "fontWeight": "500",
                "letterSpacing": 0,
                "lineHeight": 17,
                "marginBottom": 0,
                "marginLeft": 0,
                "marginRight": 0,
                "marginTop": 0,
                "paddingBottom": 0,
                "paddingLeft": 0,
                "paddingRight": 0,
                "paddingTop": 0,
                "textDecorationLine": "none",
              },
            ]
          }
        >
          Volume
        </Text>
        <View
          data-blade-component="visually-hidden"
          style={
            [
              {
                "borderColor": "black",
                "borderStyle": "solid",
                "borderWidth": 0,
                "clip": "rect(0 0 0 0)",
                "clipPath": "inset(50%)",
                "height": 1,
                "left": -10000,
                "marginBottom": -1,
                "marginLeft": 0,
                "marginRight": -1,
                "marginTop": 0,
                "overflow": "hidden",
                "paddingBottom": 0,
                "paddingLeft": 0,
                "paddingRight": 0,
                "paddingTop": 0,
                "position": "absolute",
                "whiteSpace": "nowrap",
                "width": 1,
                "wordWrap": "normal",
              },
            ]
          }
        >
          <Text
            accessible={true}
            color="surface.text.gray.normal"
            data-blade-component="text"
            fontFamily="text"
            fontSize={100}
            fontStyle="normal"
            fontWeight="regular"
            lineHeight={100}
            style={
              [
                {
                  "color": "hsla(0, 0%, 2%, 1)",
                  "fontFamily": "Inter",
                  "fontSize": 14,
                  "fontStyle": "normal",
                  "fontWeight": "400",
                  "letterSpacing": 0,
                  "lineHeight": 20,
                  "marginBottom": 0,
                  "marginLeft": 0,
                  "marginRight": 0,
                  "marginTop": 0,
                  "paddingBottom": 0,
                  "paddingLeft": 0,
                  "paddingRight": 0,
                  "paddingTop": 0,
                  "textDecorationLine": "none",
                },
              ]
            }
          />
        </View>
      </View>
    </View>
    <RNCSlider
      accessibilityLabel="Volume"
      disabled={false}
      enabled={true}
      inverted={false}
      maximumTrackTintColor="hsla(0, 0%, 97%, 1)"
      maximumValue={100}
      minimumTrackTintColor="hsla(218, 89%, 51%, 1)"
      minimumValue={0}
      onChange={[Function]}
      onRNCSliderSlidingComplete={[Function]}
      onRNCSliderSlidingStart={null}
      onRNCSliderValueChange={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      step={1}
      style={
        {
          "height": 40,
        }
      }
      tapToSeek={false}
      thumbImage={null}
      thumbTintColor="hsla(218, 89%, 51%, 1)"
      value={0}
    />
    <View
      data-blade-component="base-box"
      display="flex"
      flexDirection="row"
      justifyContent="space-between"
      style={
        [
          {
            "display": "flex",
            "flexDirection": "row",
            "justifyContent": "space-between",
          },
        ]
      }
    >
      <Text
        accessible={true}
        color="surface.text.gray.muted"
        data-blade-component="text"
        fontFamily="text"
        fontSize={75}
        fontStyle="normal"
        fontWeight="regular"
        lineHeight={75}
        style={
          [
            {
              "color": "hsla(204, 9%, 42%, 1)",
              "fontFamily": "Inter",
              "fontSize": 12,
              "fontStyle": "normal",
              "fontWeight": "400",
              "letterSpacing": 0,
              "lineHeight": 17,
              "marginBottom": 0,
              "marginLeft": 0,
              "marginRight": 0,
              "marginTop": 0,
              "paddingBottom": 0,
              "paddingLeft": 0,
              "paddingRight": 0,
              "paddingTop": 0,
              "textDecorationLine": "none",
            },
          ]
        }
      >
        0
      </Text>
      <Text
        accessible={true}
        color="surface.text.gray.muted"
        data-blade-component="text"
        fontFamily="text"
        fontSize={75}
        fontStyle="normal"
        fontWeight="regular"
        lineHeight={75}
        style={
          [
            {
              "color": "hsla(204, 9%, 42%, 1)",
              "fontFamily": "Inter",
              "fontSize": 12,
              "fontStyle": "normal",
              "fontWeight": "400",
              "letterSpacing": 0,
              "lineHeight": 17,
              "marginBottom": 0,
              "marginLeft": 0,
              "marginRight": 0,
              "marginTop": 0,
              "paddingBottom": 0,
              "paddingLeft": 0,
              "paddingRight": 0,
              "paddingTop": 0,
              "textDecorationLine": "none",
            },
          ]
        }
      >
        100
      </Text>
    </View>
    <View
      data-blade-component="base-box"
      id="slider-61-successtext-65"
      style={
        [
          {
            "marginTop": 4,
          },
        ]
      }
    >
      <View
        alignItems="center"
        data-blade-component="base-box"
        display="flex"
        flexDirection="row"
        gap="spacing.2"
        style={
          [
            {
              "alignItems": "center",
              "display": "flex",
              "flexDirection": "row",
              "gap": 4,
            },
          ]
        }
      >
        <View
          data-blade-component="box"
          flexShrink={0}
          style={
            [
              {
                "flexShrink": 0,
                "marginTop": 0,
              },
            ]
          }
        >
          <RNSVGSvgView
            accessibilityElementsHidden={true}
            align="xMidYMid"
            bbHeight="12px"
            bbWidth="12px"
            data-blade-component="icon"
            display="block"
            fill="none"
            focusable={false}
            height="12px"
            importantForAccessibility="no-hide-descendants"
            meetOrSlice={0}
            minX={0}
            minY={0}
            style={
              [
                {
                  "backgroundColor": "transparent",
                  "borderWidth": 0,
                },
                [
                  {
                    "display": "block",
                  },
                ],
                {
                  "flex": 0,
                  "height": 12,
                  "width": 12,
                },
              ]
            }
            vbHeight={24}
            vbWidth={24}
            width="12px"
          >
            <RNSVGGroup
              fill={null}
              propList={
                [
                  "fill",
                ]
              }
            >
              <RNSVGPath
                clipRule={0}
                d="M20.7071 5.29289C21.0976 5.68342 21.0976 6.31658 20.7071 6.70711L9.70711 17.7071C9.31658 18.0976 8.68342 18.0976 8.29289 17.7071L3.29289 12.7071C2.90237 12.3166 2.90237 11.6834 3.29289 11.2929C3.68342 10.9024 4.31658 10.9024 4.70711 11.2929L9 15.5858L19.2929 5.29289C19.6834 4.90237 20.3166 4.90237 20.7071 5.29289Z"
                fill={
                  {
                    "payload": 4278220091,
                    "type": 0,
                  }
                }
                fillRule={0}
                propList={
                  [
                    "fill",
                    "fillRule",
                  ]
                }
              />
            </RNSVGGroup>
          </RNSVGSvgView>
        </View>
        <Text
          accessible={true}
          color="feedback.text.positive.intense"
          data-blade-component="text"
          fontFamily="text"
          fontSize={50}
          fontStyle="normal"
          fontWeight="regular"
          lineHeight={50}
          marginTop="spacing.0"
          style={
            [
              {
                "color": "hsla(150, 100%, 23%, 1)",
                "fontFamily": "Inter",
                "fontSize": 11,
                "fontStyle": "normal",
                "fontWeight": "400",
                "letterSpacing": 0,
                "lineHeight": 16,
                "marginBottom": 0,
                "marginLeft": 0,
                "marginRight": 0,
                "marginTop": 0,
                "paddingBottom": 0,
                "paddingLeft": 0,
                "paddingRight": 0,
                "paddingTop": 0,
                "textDecorationLine": "none",
              },
            ]
          }
        >
          Valid range
        </Text>
      </View>
    </View>
  </View>
</View>
`;
